@@ -80,6 +80,22 @@ class TryNext(Exception):
         self.args = args
         self.kwargs = kwargs
 
+class IPyAutocall:
+    """ Instances of this class are always autocalled
+    
+    This happens regardless of 'autocall' variable state. Use this to
+    develop macro-like mechanisms.
+    """
+    
+    def set_ip(self,ip):
+        """ Will be used to set _ip point to current ipython instance b/f call
+        
+        Override this method if you don't want this to happen.
+        
+        """
+        self._ip = ip
+    
+
 # contains the most recently instantiated IPApi
 
 class IPythonNotRunning:
